# RuVector

./: .gitignore  Cargo.toml  deny.toml
.cargo/: audit.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: build-tiny-dancer.yml  ci.yml  clippy-fmt.yml  publish-all.yml  regression-guard.yml  supply-chain.yml  wasm-dedup-check.yml
crates/cognitum-gate-kernel/: Cargo.toml
crates/cognitum-gate-tilezero/: Cargo.toml
crates/mcp-brain/: Cargo.toml
crates/mcp-brain-server/: Cargo.toml
crates/neural-trader-strategies/: Cargo.toml
crates/prime-radiant/: Cargo.toml
crates/prime-radiant/src/coherence/: engine.rs
crates/prime-radiant/src/hyperbolic/: energy.rs
crates/ruvector-attention-node/: Cargo.toml
crates/ruvector-attention-unified-wasm/: Cargo.toml
crates/ruvector-attention-wasm/: Cargo.toml
crates/ruvector-attn-mincut/: Cargo.toml
crates/ruvector-bench/: Cargo.toml
crates/ruvector-capgated/: Cargo.toml
crates/ruvector-capgated/src/: cap_graph.rs  dataset.rs  eager_mask.rs  lib.rs  oracle.rs  post_filter.rs
crates/ruvector-cli/: Cargo.toml
crates/ruvector-cluster/: Cargo.toml
crates/ruvector-cnn/: Cargo.toml
crates/ruvector-cnn-wasm/: Cargo.toml
crates/ruvector-consciousness/: Cargo.toml
crates/ruvector-consciousness-wasm/: Cargo.toml
crates/ruvector-core/: Cargo.toml
crates/ruvector-crv/: Cargo.toml
crates/ruvector-dag-wasm/: Cargo.toml
crates/ruvector-decompiler/: Cargo.toml
crates/ruvector-delta-consensus/: Cargo.toml
crates/ruvector-delta-core/: Cargo.toml
crates/ruvector-delta-graph/: Cargo.toml
crates/ruvector-delta-index/: Cargo.toml
crates/ruvector-delta-wasm/: Cargo.toml
crates/ruvector-diskann/: BENCH_673.md  Cargo.toml
crates/ruvector-dither/: Cargo.toml
crates/ruvector-domain-expansion/: Cargo.toml
crates/ruvector-domain-expansion-wasm/: Cargo.toml
crates/ruvector-economy-wasm/: Cargo.toml
crates/ruvector-exotic-wasm/: Cargo.toml
crates/ruvector-fpga-transformer/: Cargo.toml
crates/ruvector-fpga-transformer-wasm/: Cargo.toml
crates/ruvector-gnn-node/: Cargo.toml
crates/ruvector-gnn-wasm/: Cargo.toml
crates/ruvector-graph/: Cargo.toml
crates/ruvector-graph-condense/: Cargo.toml  README.md
crates/ruvector-graph-condense-wasm/: Cargo.toml  README.md
crates/ruvector-graph-condense-wasm/src/: lib.rs
crates/ruvector-graph-condense/benches/: condense_bench.rs
crates/ruvector-graph-condense/examples/: accuracy_eval.rs  worldgraph.rs
crates/ruvector-graph-condense/src/: condense.rs  cutloss.rs  diffcut.rs  error.rs  features.rs  gnn_eval.rs  lib.rs  metrics.rs  node.rs  regions.rs  stream.rs  synthetic.rs
crates/ruvector-graph-condense/tests/: accuracy.rs  diffcut.rs
crates/ruvector-graph-node/: Cargo.toml
crates/ruvector-graph-transformer/: Cargo.toml
crates/ruvector-graph-transformer-node/: Cargo.toml
crates/ruvector-graph-transformer-wasm/: Cargo.toml
crates/ruvector-graph-wasm/: Cargo.toml
crates/ruvector-kalshi/: Cargo.toml
crates/ruvector-learning-wasm/: Cargo.toml
crates/ruvector-math/: Cargo.toml
crates/ruvector-math-wasm/: Cargo.toml
crates/ruvector-mincut/: Cargo.toml
crates/ruvector-mincut-gated-transformer/: Cargo.toml
crates/ruvector-mincut-node/: Cargo.toml
crates/ruvector-mincut-wasm/: Cargo.toml
crates/ruvector-nervous-system/: Cargo.toml
crates/ruvector-node/: Cargo.toml
crates/ruvector-perception/: Cargo.toml
crates/ruvector-perception/src/: absence.rs  captcha.rs  coherence.rs  custody.rs  engine.rs  hypothesis.rs  identity.rs  lib.rs  modality.rs  node.rs  predict.rs  reality.rs  state.rs  swarm.rs  topology.rs  witness.rs
crates/ruvector-perception/tests/: scenarios.rs
crates/ruvector-raft/: Cargo.toml
crates/ruvector-replication/: Cargo.toml
crates/ruvector-robotics/: Cargo.toml
crates/ruvector-router-core/: Cargo.toml
crates/ruvector-server/: Cargo.toml
crates/ruvector-snapshot/: Cargo.toml
crates/ruvector-solver-node/: Cargo.toml
crates/ruvector-solver-wasm/: Cargo.toml
crates/ruvector-spann/: Cargo.toml
crates/ruvector-spann/src/: distance.rs  index.rs  kmeans.rs  lib.rs
crates/ruvector-sparse-inference/: Cargo.toml
crates/ruvector-sparsifier/: Cargo.toml
crates/ruvector-temporal-tensor/: Cargo.toml
crates/ruvector-tiny-dancer-core/: Cargo.toml
crates/ruvector-tiny-dancer-node/: Cargo.toml
crates/ruvector-tiny-dancer-wasm/: Cargo.toml
crates/ruvector-verified-wasm/: Cargo.toml
crates/ruvector-wasm/: Cargo.toml
crates/ruvllm/: .reasoning_bank_patterns  Cargo.toml  README.md
crates/ruvllm-cli/: Cargo.toml
crates/ruvllm-wasm/: Cargo.toml
crates/ruvllm_retrieval_diffusion/: Cargo.toml
crates/ruvllm_retrieval_diffusion/examples/: drum_patterns.rs
crates/ruvllm_retrieval_diffusion/src/: lib.rs
crates/ruvllm_sparse_attention/: Cargo.toml
crates/ruvllm_sparse_attention/examples/: esp32s3_smoke.rs  sparse_mario.rs
crates/rvf/: README.md
crates/rvlite/: Cargo.toml
crates/rvm/: Cargo.toml  README.md
crates/sona/: Cargo.toml
crates/thermorust/: Cargo.toml
docs/adr/: ADR-196-structure-preserving-graph-condensation.md  ADR-197-differentiable-min-cut-condensation-loss.md  ADR-198-physical-perception-substrate.md  ADR-199-sky-monitor-skygraph-appliance.md  ADR-252-multi-vector-maxsim.md  ADR-268-capability-gated-ann.md  ADR-268-spann-partition-spill.md  ADR-269-mragent-graph-memory-darwin-optimization.md  ADR-270-self-reconstructing-graph-memory-beyond-sota.md
examples/boundary-discovery/: Cargo.toml
examples/brain-boundary-discovery/: Cargo.toml
examples/climate-consciousness/: Cargo.toml
examples/cmb-consciousness/: Cargo.toml
examples/dna/: Cargo.toml
examples/earthquake-boundary-discovery/: Cargo.toml
examples/ecosystem-consciousness/: Cargo.toml
examples/frb-boundary-discovery/: Cargo.toml
examples/gene-consciousness/: Cargo.toml
examples/google-cloud/: Cargo.toml
examples/sky-monitor/: Cargo.toml
examples/sky-monitor/wasm/: Cargo.toml
examples/sky-monitor/wasm/src/: sat.rs
npm/: .gitignore  package-lock.json  package.json
(+203 files in other folders)
