[package]
name = "ruvector-mincut"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "World's first subpolynomial dynamic min-cut: self-healing networks, AI optimization, real-time graph analysis"
keywords = ["graph", "minimum-cut", "network-analysis", "self-healing", "dynamic-graph"]
categories = ["algorithms", "data-structures", "science", "mathematics", "simulation"]
homepage = "https://ruv.io"
documentation = "https://docs.rs/ruvector-mincut"

[dependencies]
# RuVector dependencies
ruvector-core = { version = "2.0.1", path = "../ruvector-core", default-features = false }
ruvector-graph = { version = "2.0.1", path = "../ruvector-graph", default-features = false, optional = true }

# Core dependencies
petgraph = "0.6"
rayon = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

# Data structures
roaring = "0.10"
ordered-float = "4.2"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }

[features]
default = ["exact", "approximate"]
full = ["exact", "approximate", "integration", "monitoring", "simd", "agentic", "jtree", "tiered", "canonical"]
exact = []  # Exact minimum cut algorithm
approximate = []  # (1+ε)-approximate algorithm
integration = ["ruvector-graph"]  # GraphDB integration
monitoring = []  # Real-time monitoring with callbacks
simd = ["ruvector-core/simd"]
wasm = []  # WASM compatibility mode
agentic = []  # 256-core parallel agentic chip backend
jtree = []  # j-Tree hierarchical decomposition (ADR-002)
tiered = ["jtree", "exact"]  # Two-tier coordinator (j-tree + exact)
canonical = []  # Pseudo-deterministic canonical min-cut: source_anchored (Tier 1), tree_packing (Tier 2), dynamic (Tier 3)
all-cut-queries = ["jtree"]  # Sparsest cut, multiway, multicut queries

[lib]
crate-type = ["rlib"]
bench = false

[[bench]]
name = "mincut_bench"
harness = false

[[bench]]
name = "bounded_bench"
harness = false

[[bench]]
name = "sota_bench"
harness = false

[[bench]]
name = "paper_algorithms_bench"
harness = false

[[bench]]
name = "snn_bench"
harness = false

[[bench]]
name = "jtree_bench"
harness = false

[[bench]]
name = "optimization_bench"
harness = false

[[bench]]
name = "canonical_bench"
harness = false
required-features = ["canonical"]

[[example]]
name = "temporal_attractors"
path = "../../examples/mincut/temporal_attractors/src/main.rs"
required-features = ["exact"]

[[example]]
name = "strange_loop"
path = "../../examples/mincut/strange_loop/main.rs"
required-features = ["exact"]

[[example]]
name = "causal_discovery"
path = "../../examples/mincut/causal_discovery/main.rs"
required-features = ["exact"]

[[example]]
name = "time_crystal"
path = "../../examples/mincut/time_crystal/main.rs"
required-features = ["exact"]

[[example]]
name = "morphogenetic"
path = "../../examples/mincut/morphogenetic/main.rs"
required-features = ["exact"]

[[example]]
name = "neural_optimizer"
path = "../../examples/mincut/neural_optimizer/main.rs"
required-features = ["exact"]

[[example]]
name = "benchmarks"
path = "../../examples/mincut/benchmarks/main.rs"
required-features = ["exact"]

[[example]]
name = "subpoly_bench"
required-features = ["exact"]

# Research-tier crate, doc/style churn deferred per workspace cleanup pass.
# Style-only clippy lints downgraded for all targets; correctness lints remain.
[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_mut = "allow"
unused_assignments = "allow"
unused_parens = "allow"
unused_doc_comments = "allow"
unused_attributes = "allow"
unused_comparisons = "allow"
unused_must_use = "allow"
unexpected_cfgs = "allow"
elided_lifetimes_in_paths = "allow"
mismatched_lifetime_syntaxes = "allow"
let_underscore_drop = "allow"

[lints.clippy]
pedantic = { level = "allow", priority = -1 }
all = { level = "warn", priority = -2 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unnecessary_lazy_evaluations = "allow"
comparison_chain = "allow"
needless_range_loop = "allow"
redundant_closure = "allow"
useless_vec = "allow"
needless_borrows_for_generic_args = "allow"
map_entry = "allow"
manual_strip = "allow"
single_match = "allow"
collapsible_if = "allow"
collapsible_match = "allow"
collapsible_else_if = "allow"
large_enum_variant = "allow"
should_implement_trait = "allow"
only_used_in_recursion = "allow"
field_reassign_with_default = "allow"
iter_cloned_collect = "allow"
explicit_auto_deref = "allow"
let_unit_value = "allow"
assertions_on_constants = "allow"
mem_replace_with_default = "allow"
excessive_precision = "allow"
manual_div_ceil = "allow"
or_fun_call = "allow"
unwrap_or_default = "allow"
manual_range_contains = "allow"
manual_clamp = "allow"
single_match_else = "allow"
single_char_add_str = "allow"
useless_format = "allow"
comparison_to_empty = "allow"
filter_map_bool_then = "allow"
unnecessary_filter_map = "allow"
redundant_pattern_matching = "allow"
iter_kv_map = "allow"
needless_borrow = "allow"
ptr_arg = "allow"
new_without_default = "allow"
default_trait_access = "allow"
clone_on_copy = "allow"
nonminimal_bool = "allow"
absurd_extreme_comparisons = "allow"
useless_conversion = "allow"
type_complexity = "allow"
get_first = "allow"
needless_return = "allow"
redundant_field_names = "allow"
iter_nth_zero = "allow"
redundant_clone = "allow"
needless_collect = "allow"
same_item_push = "allow"
while_let_loop = "allow"
while_let_on_iterator = "allow"
for_kv_map = "allow"

redundant_pattern = "allow"
let_and_return = "allow"
needless_lifetimes = "allow"
filter_next = "allow"
manual_map = "allow"
redundant_closure_call = "allow"
trivial_regex = "allow"
int_plus_one = "allow"
cmp_owned = "allow"
redundant_static_lifetimes = "allow"
single_component_path_imports = "allow"
option_as_ref_deref = "allow"
map_clone = "allow"
if_same_then_else = "allow"
partialeq_to_none = "allow"
wrong_self_convention = "allow"
min_max = "allow"
neg_multiply = "allow"
needless_pass_by_ref_mut = "allow"
useless_attribute = "allow"
single_char_pattern = "allow"
iter_skip_zero = "allow"
unnecessary_unwrap = "allow"
ref_option = "allow"
missing_const_for_fn = "allow"
needless_question_mark = "allow"
erasing_op = "allow"
float_cmp = "allow"
approx_constant = "allow"
op_ref = "allow"
let_underscore_lock = "allow"
useless_let_if_seq = "allow"
extra_unused_lifetimes = "allow"
derive_partial_eq_without_eq = "allow"
needless_late_init = "allow"
derivable_impls = "allow"
unnecessary_to_owned = "allow"
missing_safety_doc = "allow"
tabs_in_doc_comments = "allow"
doc_lazy_continuation = "allow"
empty_line_after_doc_comments = "allow"
doc_overindented_list_items = "allow"
elidable_lifetime_names = "allow"
non_canonical_partial_ord_impl = "allow"
out_of_bounds_indexing = "allow"
overly_complex_bool_expr = "allow"
len_zero = "allow"
needless_doctest_main = "allow"
match_like_matches_macro = "allow"

identity_op = "allow"
match_single_binding = "allow"
needless_match = "allow"
unnecessary_map_or = "allow"
unnecessary_cast = "allow"
collapsible_str_replace = "allow"
single_element_loop = "allow"
unnecessary_min_or_max = "allow"
unnecessary_wraps = "allow"
manual_flatten = "allow"
manual_memcpy = "allow"
explicit_iter_loop = "allow"
zero_repeat_side_effects = "allow"
unbuffered_bytes = "allow"
to_string_in_format_args = "allow"
useless_asref = "allow"
single_char_lifetime_names = "allow"
mut_range_bound = "allow"
unnecessary_sort_by = "allow"
assign_op_pattern = "allow"
unused_unit = "allow"
