[package]
name = "ruvector-robotics"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cognitive robotics platform: bridge types, perception pipeline, cognitive architecture, and MCP tools"
repository = "https://github.com/ruvnet/ruvector"
homepage = "https://github.com/ruvnet/ruvector"
keywords = ["robotics", "perception", "cognitive", "behavior-tree", "spatial-indexing"]
categories = ["science::robotics", "algorithms"]

[features]
default = []
domain-expansion = ["dep:ruvector-domain-expansion", "dep:rand"]
rvf = ["dep:rvf-runtime", "dep:rvf-types", "dep:tempfile"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ruvector-domain-expansion = { version = "2.0.4", path = "../ruvector-domain-expansion", optional = true }
rand = { version = "0.8", optional = true }
rvf-runtime = { version = "0.3", path = "../rvf/rvf-runtime", optional = true }
rvf-types = { version = "0.2", path = "../rvf/rvf-types", features = ["std"], optional = true }
tempfile = { version = "3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "robotics_benchmarks"
harness = false

[lints.rust]
unexpected_cfgs = { level = "allow", priority = -1 }
unused_imports = "allow"
dead_code = "allow"
unused_variables = "allow"

[lints.clippy]
pedantic = { level = "allow", priority = -2 }
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = 0 }
suspicious = { level = "deny", priority = 0 }
needless_range_loop = "allow"
manual_div_ceil = "allow"
manual_is_multiple_of = "allow"
manual_range_contains = "allow"
redundant_field_names = "allow"
len_zero = "allow"
get_first = "allow"
useless_vec = "allow"
manual_clamp = "allow"
unnecessary_sort_by = "allow"
needless_update = "allow"
manual_checked_ops = { level = "allow", priority = 1 }
approx_constant = "allow"
