[package]
name = "ruvector-spann"
version = "0.1.0"
edition = "2021"
description = "SPANN-inspired partition spilling for boundary-safe ANN in RuVector"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]

[dev-dependencies]
